Ensure LF on .sh on checkout

--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,10 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+
+
+
+# Declare files that will always have CRLF line endings on checkout.
+*.sln text eol=crlf
+# Declare files that will always have LF line endings on checkout.
+*.sh text eol=lf
